fixes minor spacing bugs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ body{
     margin-left: 5%;
     margin-right: 5%;
     background-color: transparent;
+    margin-top: 10px;
 }
 h1{
     font-family: quentincaps;
